Mon Aug  5 17:33:18 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* win32/win32.c (wstr_to_mbstr, mbstr_to_wstr): fix wrong trimming.
	  WideCharToMultiByte() and MultiByteToWideChar() do not count
	  NUL-terminator in the size for conversion result, unless the input
	  length is -1.

Mon Aug  5 11:51:00 2013  Charlie Somerville  <charliesome@ruby-lang.org>

	* include/ruby/encoding.h: document which user flags are used by
	  ENCODING_MASK for better greppability

Mon Aug  5 10:01:00 2013  Charlie Somerville  <charliesome@ruby-lang.org>

	* object.c (rb_class_inherited_p): allow iclasses to be tested for
	  inheritance. [Bug #8686] [ruby-core:56174]

	* test/ruby/test_method.rb: add test

Mon Aug  5 06:13:48 2013  Zachary Scott  <e@zzak.io>

	* enumerator.c: [DOC] Remove reference to Enumerator::Lazy#cycle
	  Patch by @kachick [Fixes GH-372]
	  https://github.com/ruby/ruby/pull/372

Mon Aug  5 03:57:16 2013  Zachary Scott  <e@zzak.io>

	* lib/rss/0.9.rb: [DOC] Document RSS09 by Steve Klabnik [Bug #8732]

Mon Aug  5 03:35:11 2013  Zachary Scott  <e@zzak.io>

	* lib/rexml/attribute.rb: [DOC] Update example for #namespace
	  Patch by Ippei Obayashi [Bug #8685] [ruby-core:56173]

Sun Aug  4 21:08:29 2013  Masaki Matsushita  <glass.saga@gmail.com>

	* array.c (rb_ary_zip): performance implement by using
	  ALLOCA_N() to allocate tmp buffer.

Sun Aug  4 07:14:49 2013  Tanaka Akira  <akr@fsij.org>

	* README.EXT, README.EXT.ja: Mention rb_integer_pack and
	  rb_integer_unpack.

Sun Aug  4 01:54:45 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (BARY_TRUNC): New macro.
	  (bary_cmp): Use BARY_TRUNC.
	  (bary_mul_toom3): Ditto.
	  (bary_divmod): Ditto.
	  (abs2twocomp): Ditto.
	  (bigfixize): Ditto.
	  (rb_cstr_to_inum): Ditto.
	  (big2str_karatsuba): Ditto.
	  (bigdivrem): Ditto.

Sun Aug  4 00:57:58 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (big2str_karatsuba): Don't allocate new temporary buffer
	  if the buffer is enough for current invocation.
